--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,8 +1,18 @@
 ---
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
-pubDate: 'Jun 01 2024'
-heroImage: '../../assets/blog-placeholder-5.jpg'
+publishedDate: '2025-05-01'
+image: '../../assets/blog-placeholder-3.jpg'
+tags:
+  - css
+seo:
+  slug: mastering-css-pseudo-element-techniques
+  title: 'Mastering CSS Pseudo-Elements: Practical Use Cases & Expert Tips'
+  description: Explore a senior frontend engineer's go-to CSS pseudo-element techniques for enhancing UIs, optimizing performance, and writing cleaner, more maintainable code.
+  image: '../../assets/blog-placeholder-3.jpg'
+author: ngockhoi96
+---
+
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
@@ -15,7 +25,7 @@ If you have existing content authored in MDX, this integration will hopefully ma
 
 ## Example
 
-Here is how you import and use a UI component inside of MDX.  
+Here is how you import and use a UI component inside of MDX.
 When you open this page in the browser, you should see the clickable button below.
 
 import HeaderLink from '../../components/HeaderLink.astro';
